# bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  pages.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_pgvector_support.py
app/: README.md  __init__.py  config.py  credentials.py  db.py  deps.py  main.py  market_stream.py  models.py  requirements.txt  schemas.py  ws.py
app/api/: routes_account.py  routes_audit.py  routes_orders.py  routes_predictions.py  routes_safety.py  routes_setup.py  routes_strategy.py  routes_stream.py
app/brokers/: __init__.py  alpaca.py  base.py
app/trading/: audit.py  engine.py  risk.py  state.py
docs/: COMPETITIVE_ANALYSIS.md
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimatedNumber.tsx  AutonomyPanel.tsx  Hero3D.tsx  Kanban.tsx  Nav.tsx  ReasoningFeed.tsx  ResumePreview.tsx  SaveProgressBanner.tsx
frontend/lib/: api.ts  useLive.ts
jargon/: DISPOSAL.md  README.md  __init__.py  indicators.py  report.py  risk.py
jobhunt/: PROGRESS.md  README.md  __init__.py  __main__.py  ab.py  approval.py  digest.py  embeddings.py  http.py  interview.py  jd_parser.py  learning.py  log.py  mcp_server.py  metrics.py  models.py  notify.py  onboarding.py  public_store.py  rate_limit.py  redis_client.py  resume_renderer.py  resume_template.py  s3_client.py  skills_taxonomy.py  tools.py  trace.py
jobhunt/adapters/: __init__.py  adzuna.py  ashby.py  base.py  filters.py  fixture.py  greenhouse.py  indeed.py  lever.py  personio.py  recruitee.py  usajobs.py  workable.py
jobhunt/agents/: __init__.py  base.py  discovery.py  improvement.py  orchestrator.py  peer_critique.py  resume.py  strategy.py  submission.py  tracking.py  vetting.py
jobhunt/autofill/: __init__.py  base.py  driver.py  generic.py  icims.py  mapper.py  registry.py  workday.py
jobhunt/dashboard/: __init__.py  app.py  auth.py  billing.py  client.html  inbox_sync.py  pageviews.py  persistence.py  server.py  waitlist.py
jobhunt/db/: __init__.py  engine.py  models.py  store.py
jobhunt/demo/: README.md  _capture.py  _record.py  demo.html
jobhunt/enrichers/: __init__.py  base.py  heuristic.py
jobhunt/fixtures/: jobs.json
jobhunt/inbox/: __init__.py  calendar.py  classify.py  sources.py
jobhunt/integrations/: __init__.py  enrichment.py  gcal.py  github.py  gmail.py  google_auth.py  google_factory.py  market.py
jobhunt/llm/: __init__.py  anthropic_client.py  callbacks.py  factory.py  gemini_client.py
jobhunt/site/: app.html  index.html  walkthrough.html
jobhunt/submitters/: __init__.py  base.py  greenhouse.py  lever.py  registry.py
jobhunt/tracker/: index.html  tasks.json
jobhunt/vectorstore/: __init__.py  base.py  memory.py  pgvector.py
tradebot/: cli.py  dashboard.py  engine.py  market.py  strategy.py
web/: index.html  package-lock.json  package.json
(+92 files in other folders)
